configure project and role environment

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,13 @@
 [tox]
-envlist = py37
+envlist = project, anarchism
 
 [testenv]
+envdir = {toxinidir}/.tox/env
 deps = -rtest-requirements.txt
-changedir = {toxinidir}/test
 commands = molecule test
+
+[testenv:project]
+changedir = {toxinidir}/test/debian
+
+[testenv:anarchism]
+changedir = {toxinidir}/test/debian/roles/anarchism
