use role default variable

--- a/test/debian/roles/anarchism/tasks/install.yml
+++ b/test/debian/roles/anarchism/tasks/install.yml
@@ -2,3 +2,4 @@
 - name: "(install) apt-get install {{ anarchism_packages|join(' ') }}"
   apt:
     name: "{{ anarchism_packages }}"
+  when: anarchism_install
