--- a/test/debian/molecule/default/molecule.yml
+++ b/test/debian/molecule/default/molecule.yml
@@ -31,11 +31,13 @@ verifier:
     # integgration
     - ../../../roles/anarchism/molecule/default/tests/test_*.py
     # system
-    - ../../../roles/anarchism/molecule/default/system/test_*.py
+    - ../../../roles/anarchism/molecule/default/system /test_*.py
+  env:
+    TESTAID_EXTRA_VARS_FILES: "../../extra_vars/extra_vars_first.yml:../../extra_vars/extra_vars_second.yml"
   lint:
     name: flake8
 scenario:
-  name: default  # optional
+  name: default
   create_sequence:
     - create
   check_sequence:
