run pytest --cache-clear before running molecule test

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,9 @@ envlist = project, anarchism
 [testenv]
 envdir = {toxinidir}/.tox/env
 deps = -rtest-requirements.txt
-commands = molecule test
+commands =
+    pytest --cache-clear
+    molecule test
 
 [testenv:project]
 changedir = {toxinidir}/test/debian
