--- a/test/debian/group_vars/all/templates.yml
+++ b/test/debian/group_vars/all/templates.yml
@@ -16,7 +16,7 @@ dict1:
   first_key: first_value
   second_key: second_value
 
-lookup1: "{{ lookup('flattened', [1,2,3,[4,5,6]]) }}"
+lookup_flattened: "{{ lookup('flattened', [1,2,3,[4,5,6]]) }}"
 
 filter_zip: "{{ list1 | zip(anarchism_packages) | list }}"
 
