--- a/test/debian/roles/anarchism/molecule/default/molecule.yml
+++ b/test/debian/roles/anarchism/molecule/default/molecule.yml
@@ -13,6 +13,10 @@ platforms:
     pre_build_image: true
 provisioner:
   name: ansible
+  inventory:
+    group_vars:
+      all:
+        group_vars_all: my_group_vars_value
   config_options:
     defaults:
       interpreter_python: auto_silent
@@ -21,7 +25,9 @@ provisioner:
 verifier:
   name: testinfra
   options:
-    p: cacheprovider
+    # m: debug
+    # p: cacheprovider  # enable cache
+    s: true  # capture output
   lint:
     name: flake8
 scenario:
