--- a/tox.ini
+++ b/tox.ini
@@ -8,8 +8,8 @@ commands =
     pytest --cache-clear
     molecule test
 
-[testenv:project]
-changedir = {toxinidir}/test/debian
+[testenv:debian_project]
+changedir = {toxinidir}/test/molecule/debian
 
-[testenv:anarchism]
-changedir = {toxinidir}/test/debian/roles/anarchism
+[testenv:debian_role]
+changedir = {toxinidir}/test/molecule/debian/roles/anarchism
