--- a/test/molecule/debian/roles/anarchism/defaults/main.yml
+++ b/test/molecule/debian/roles/anarchism/defaults/main.yml
@@ -4,5 +4,4 @@ anarchism_packages:
 
 anarchism_install: true
 
-role_defaults_value: my_role_defaults_value
-role_defaults_var: "{{ role_defaults_value }}"
+my_role_defaults_var: my_role_defaults_value
