Rename test dirs

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = debian_project, debian_role
+envlist = debian_project_default, debian_role_default
 
 [testenv]
 envdir = {toxinidir}/.tox/env
@@ -8,8 +8,8 @@ commands =
     pytest --cache-clear
     molecule test
 
-[testenv:debian_project]
-changedir = {toxinidir}/test/molecule/debian
+[testenv:debian_project_default]
+changedir = {toxinidir}/test/system/debian
 
-[testenv:debian_role]
-changedir = {toxinidir}/test/molecule/debian/roles/anarchism
+[testenv:debian_role_default]
+changedir = {toxinidir}/test/system/debian/roles/anarchism
