Add unit tests to tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,26 @@
 [tox]
-envlist = debian_project_default, debian_role_default
+envlist =
+    unit
+    debian_project_default
+    debian_role_default
 
 [testenv]
 envdir = {toxinidir}/.tox/env
 deps = -rtest-requirements.txt
+
+[testenv:unit]
+changedir = {toxinidir}/test/unit
+commands =
+    pytest 
+
+[testenv:debian_project_default]
+changedir = {toxinidir}/test/system/debian
 commands =
     pytest --cache-clear
     molecule test
 
-[testenv:debian_project_default]
-changedir = {toxinidir}/test/system/debian
-
 [testenv:debian_role_default]
 changedir = {toxinidir}/test/system/debian/roles/anarchism
+commands =
+    pytest --cache-clear
+    molecule test
