--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,6 @@ addopts = -p no:cacheprovider
 
 markers =
 	debug: mark a test to debug it.
+
+# do not collect classes like TestVars only because it starts with 'test'
+python_classes =
