--- a/test/system/debian/group_vars/all/templates.yml
+++ b/test/system/debian/group_vars/all/templates.yml
@@ -1,9 +1,17 @@
 ---
 my_var_1: my_string_1
-template2: "{{ my_var_1 }}"
-template3: "{{ template2 }}"
-template4: "inline+{{ my_var_1 }}"
-template5: "{{ my_var_1 }}+inline"
+template1: "{{ my_var_1 }}"
+template2: "{{ template1 }}"
+template3: "inline+{{ my_var_1 }}"
+template4: "{{ my_var_1 }}+inline"
+template5: "inline+{{ my_var_1 }}+inline"
+
+my_var_2: 99
+template6: "{{ my_var_2 }}"
+template7: "{{ template6 }}"
+template8: "inline+{{ my_var_2 }}"
+template9: "{{ my_var_2 }}+inline"
+template10: "inline+{{ my_var_2 }}+inline"
 
 special1: "äö(ü'!)§$;~é"
 special2: 'ñô‰(„}»")¯]¿¬'
