--- a/test/system/debian/molecule/default/molecule.yml
+++ b/test/system/debian/molecule/default/molecule.yml
@@ -27,9 +27,11 @@ verifier:
   name: testinfra
   options:
     # testvars-no-resolve-vars: true
+    testvars-no-gather-localhost: true
     # testvars-no-gather-facts: true
     # testvars-no-gather-molecule: true
     # testvars-no-extra-vars: true
+    testvars-no-resolve-localhost: true
     # m: debug
     # p: cacheprovider  # enable cache
     s: true  # capture output
