Add test for role whitelist and fix #8

--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,7 @@
 envlist =
     unit
     debian_project_default
+    debian_project_whitelist
     debian_role_default
 
 [testenv]
@@ -18,6 +19,12 @@ changedir = {toxinidir}/test/system/debian
 commands =
     pytest --cache-clear
     molecule test
+
+[testenv:debian_project_whitelist]
+changedir = {toxinidir}/test/system/debian
+commands =
+    pytest --cache-clear
+    molecule test --scenario-name whitelist
 
 [testenv:debian_role_default]
 changedir = {toxinidir}/test/system/debian/roles/anarchism
