Add blacklist scenario

--- a/tox.ini
+++ b/tox.ini
@@ -26,6 +26,12 @@ commands =
     pytest --cache-clear
     molecule test --scenario-name whitelist
 
+[testenv:debian_project_blacklist]
+changedir = {toxinidir}/test/system/debian
+commands =
+    pytest --cache-clear
+    molecule test --scenario-name blacklist
+
 [testenv:debian_role_default]
 changedir = {toxinidir}/test/system/debian/roles/anarchism
 commands =
