--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
 envlist =
     unit
-    debian_project_default
-    debian_project_whitelist
-    debian_role_default
+    project_project_default
+    project_project_whitelist
+    project_role_default
 
 [testenv]
 envdir = {toxinidir}/.tox/env
@@ -14,26 +14,26 @@ changedir = {toxinidir}/test/unit
 commands =
     pytest
 
-[testenv:debian_project_default]
-changedir = {toxinidir}/test/system/debian
+[testenv:project_project_default]
+changedir = {toxinidir}/test/system/project
 commands =
     pytest --cache-clear
     molecule test
 
-[testenv:debian_project_whitelist]
-changedir = {toxinidir}/test/system/debian
+[testenv:project_project_whitelist]
+changedir = {toxinidir}/test/system/project
 commands =
     pytest --cache-clear
     molecule test --scenario-name whitelist
 
-[testenv:debian_project_blacklist]
-changedir = {toxinidir}/test/system/debian
+[testenv:project_project_blacklist]
+changedir = {toxinidir}/test/system/project
 commands =
     pytest --cache-clear
     molecule test --scenario-name blacklist
 
-[testenv:debian_role_default]
-changedir = {toxinidir}/test/system/debian/roles/anarchism
+[testenv:project_role_default]
+changedir = {toxinidir}/test/system/project/roles/anarchism
 commands =
     pytest --cache-clear
     molecule test
