--- a/test/system/project/group_vars/all/github_issues.yml
+++ b/test/system/project/group_vars/all/github_issues.yml
@@ -1,3 +1,3 @@
 ---
 # https://github.com/RebelCodeBase/testaid/issues/1
-github_issues_1_file: "{{ (ansible_facts['distribution_version'] is version('18.04', '>=')) | ternary('foo', 'bar') }}"
+project_github_issues_1_file: "{{ (ansible_facts['distribution_version'] is version('18.04', '>=')) | ternary('foo', 'bar') }}"
