--- a/test/system/project/group_vars/all/templates.yml
+++ b/test/system/project/group_vars/all/templates.yml
@@ -1,36 +1,36 @@
 ---
-my_var_1: my_string_1
-template1: "{{ my_var_1 }}"
-template2: "{{ template1 }}"
-template3: "{{ template1 }}"
-template4: "inline+{{ my_var_1 }}"
-template5: "{{ my_var_1 }}+inline"
-template6: "inline+{{ my_var_1 }}+inline"
+project_my_var_1: my_string_1
+project_template1: "{{ project_my_var_1 }}"
+project_template2: "{{ project_template1 }}"
+project_template3: "{{ project_template1 }}"
+project_template4: "inline+{{ project_my_var_1 }}"
+project_template5: "{{ project_my_var_1 }}+inline"
+project_template6: "inline+{{ project_my_var_1 }}+inline"
 
-my_var_2: 99
-template7: "{{ my_var_2 }}"
-template8: "{{ template7 }}"
-template9: "inline+{{ my_var_2 }}"
-template10: "{{ my_var_2 }}+inline"
-template11: "inline+{{ my_var_2 }}+inline"
+project_my_var_2: 99
+project_template7: "{{ project_my_var_2 }}"
+project_template8: "{{ project_template7 }}"
+project_template9: "inline+{{ project_my_var_2 }}"
+project_template10: "{{ project_my_var_2 }}+inline"
+project_template11: "inline+{{ project_my_var_2 }}+inline"
 
-special1: "äö(ü'!)§$;~é"
-special2: 'ñô‰(„}»")¯]¿¬'
-special3: "{{ special1 }}"
-special4: "{{ special2 }}"
+project_special1: "äö(ü'!)§$;~é"
+project_special2: 'ñô‰(„}»")¯]¿¬'
+project_special3: "{{ project_special1 }}"
+project_special4: "{{ project_special2 }}"
 
-list1:
+project_list1:
   - first_list_item
   - second_list_item
 
-list2: "{{ list1 }}"
+project_list2: "{{ project_list1 }}"
 
-dict1:
+project_dict1:
   first_key: first_value
   second_key: second_value
 
-lookup_flattened: "{{ lookup('flattened', [1,2,3,[4,5,6]]) }}"
+project_lookup_flattened: "{{ lookup('flattened', [1,2,3,[4,5,6]]) }}"
 
-filter_zip: "{{ list1 | zip(anarchism_packages) | list }}"
+project_filter_zip: "{{ project_list1 | zip(anarchism_packages) | list }}"
 
-filter_dict2items: "{{ dict1 | dict2items }}"
+project_filter_dict2items: "{{ project_dict1 | dict2items }}"
