--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,7 @@
 envlist =
     unit
     project_project_default
+    project_project_blacklist
     project_project_whitelist
     project_role_default
 
