--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,10 @@
 [tox]
 envlist =
     unit
-    project_project_default
-    project_project_blacklist
-    project_project_whitelist
-    project_role_default
+    anarchism_project_default
+    anarchism_project_blacklist
+    anarchism_project_whitelist
+    anarchism_role_default
 
 [testenv]
 envdir = {toxinidir}/.tox/env
@@ -15,26 +15,26 @@ changedir = {toxinidir}/test/unit
 commands =
     pytest
 
-[testenv:project_project_default]
-changedir = {toxinidir}/test/system/project
+[testenv:anarchism_project_default]
+changedir = {toxinidir}/test/system/anarchism
 commands =
     pytest --cache-clear
     molecule test
 
-[testenv:project_project_whitelist]
-changedir = {toxinidir}/test/system/project
+[testenv:anarchism_project_whitelist]
+changedir = {toxinidir}/test/system/anarchism
 commands =
     pytest --cache-clear
     molecule test --scenario-name whitelist
 
-[testenv:project_project_blacklist]
-changedir = {toxinidir}/test/system/project
+[testenv:anarchism_project_blacklist]
+changedir = {toxinidir}/test/system/anarchism
 commands =
     pytest --cache-clear
     molecule test --scenario-name blacklist
 
-[testenv:project_role_default]
-changedir = {toxinidir}/test/system/project/roles/anarchism
+[testenv:anarchism_role_default]
+changedir = {toxinidir}/test/system/anarchism/roles/anarchism
 commands =
     pytest --cache-clear
     molecule test
