Fix molecule docker vm names

--- a/test/system/anarchism/molecule/blacklist/molecule.yml
+++ b/test/system/anarchism/molecule/blacklist/molecule.yml
@@ -4,7 +4,7 @@ driver:
 lint:
   name: yamllint
 platforms:
-  - name: molecule-testaid
+  - name: molecule-testaid-anarchism-blacklist
     image: "geerlingguy/docker-${MOLECULE_DISTRO:-debian10}-ansible:latest"
     command: ${MOLECULE_DOCKER_COMMAND:-""}
     volumes:
