--- a/tox.ini
+++ b/tox.ini
@@ -2,9 +2,9 @@
 envlist =
     unit
     anarchism_project_default
-    anarchism_project_blacklist
-    anarchism_project_whitelist
     anarchism_role_default
+    ruby_project_default
+    ruby_project_whitelist
 
 [testenv]
 envdir = {toxinidir}/.tox/env
@@ -21,20 +21,20 @@ commands =
     pytest --cache-clear
     molecule test
 
-[testenv:anarchism_project_whitelist]
-changedir = {toxinidir}/test/system/anarchism
-commands =
-    pytest --cache-clear
-    molecule test --scenario-name whitelist
-
-[testenv:anarchism_project_blacklist]
-changedir = {toxinidir}/test/system/anarchism
-commands =
-    pytest --cache-clear
-    molecule test --scenario-name blacklist
-
 [testenv:anarchism_role_default]
 changedir = {toxinidir}/test/system/anarchism/roles/anarchism
 commands =
     pytest --cache-clear
     molecule test
+
+[testenv:ruby_project_default]
+changedir = {toxinidir}/test/system/ruby
+commands =
+    pytest --cache-clear
+    molecule test
+
+[testenv:ruby_project_whitelist]
+changedir = {toxinidir}/test/system/ruby
+commands =
+    pytest --cache-clear
+    molecule test --scenario-name whitelist
