Add private group var

--- a/test/system/anarchism/group_vars/all/anarchism.yml
+++ b/test/system/anarchism/group_vars/all/anarchism.yml
@@ -3,4 +3,4 @@ anarchism_packages:
   - anarchism
   - fortune-anarchism
 
-anarchism_group_vars_all: my_group_vars_value
+anarchism_group_vars_all: my_group_vars_all_value
