--- a/tox.ini
+++ b/tox.ini
@@ -33,8 +33,14 @@ commands =
     pytest --cache-clear
     molecule test
 
-[testenv:ruby_project_whitelist]
+[testenv:ruby_project_blacklist_one]
 changedir = {toxinidir}/test/system/ruby
 commands =
     pytest --cache-clear
-    molecule test --scenario-name whitelist
+    molecule test --scenario-name blacklist_one
+
+[testenv:ruby_project_blacklist_two]
+changedir = {toxinidir}/test/system/ruby
+commands =
+    pytest --cache-clear
+    molecule test --scenario-name blacklist_two
