Add group var to system test

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,8 @@ envlist =
     anarchism_project_default
     anarchism_role_default
     ruby_project_default
-    ruby_project_whitelist
+    ruby_project_blacklist_one
+    ruby_project_blacklist_two
 
 [testenv]
 envdir = {toxinidir}/.tox/env
