--- a/test/system/anarchism/molecule/default/molecule.yml
+++ b/test/system/anarchism/molecule/default/molecule.yml
@@ -11,8 +11,6 @@ platforms:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
     privileged: true
     pre_build_image: true
-    groups:
-      - private
 provisioner:
   name: ansible
   config_options:
@@ -20,7 +18,7 @@ provisioner:
       interpreter_python: auto_silent
   inventory:
     links:
-      group_vars: ../../group_vars
+      group_vars: ../../group_vars/
   playbooks:
     converge: ../../site.yml
   lint:
