Adapt tests to usage of hostvars

--- a/test/system/anarchism/group_vars/private/private.yml
+++ b/test/system/anarchism/group_vars/private/private.yml
@@ -1,2 +1,3 @@
 ---
-anarchism_group_vars_private: my_group_vars_private_value
+anarchism_group_vars_private_var: my_group_vars_private_value
+anarchism_group_vars_private_var_reference: "{{ anarchism_group_vars_private_var }}"
